<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.example.apple.fragmentdemo.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.example.apple.fragmentdemo.RoundedImageView
                android:id="@+id/round_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/image"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:lines="1"
                android:maxLength="25" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mobile_no"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_mobile_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/enter_valid_mobile_number"
                android:inputType="number"
                android:lines="1"
                android:maxLength="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/email_id"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/enter_valid_email_id"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="25" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/address"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/address1"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:scrollHorizontally="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_checkBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Add to Favorite"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="YES" />

            <CheckBox
                android:id="@+id/checkbox_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="NO" />

        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#9d84f9"
            android:text="@string/submit" />

        <Button
            android:id="@+id/getSavedDetailsButton"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#9d84f9"
            android:text="@string/get_saved_details" />

    </LinearLayout>

</LinearLayout>
